add history for software on frontend
