# Registry-Backend/Registry-Backend/Controllers/SoftwaresController.cs
@@ -84,10 +84,10 @@ namespace Registry_Backend.Controllers
 		[ProducesResponseType(typeof(string), StatusCodes.Status200OK)]
 		public IActionResult AddSoftware([FromBody] Software software)
 		{
-			dbContext.Softwares.Add(software);
+			var result = dbContext.Softwares.Add(software);
 			dbContext.SaveChanges();
 
-			return Ok("OK");
+			return Ok(result.Entity.Id);
 		}
 
 
@@ -134,7 +134,7 @@ namespace Registry_Backend.Controllers
 
 		[HttpPost("AddHistoryEntry")]
 		[ProducesResponseType(typeof(string), StatusCodes.Status200OK)]
-		public IActionResult AddHistoryEntry([FromQuery] int softwareId, [FromQuery] string userId, [FromQuery] bool startAssignment)
+		public IActionResult AddHistoryEntry([FromQuery] int softwareId, [FromQuery] string? userId, [FromQuery] bool startAssignment)
 		{
 			var software = dbContext.Softwares.Where(x => x.Id == softwareId).FirstOrDefault();
 			if (software == null)
@@ -176,7 +176,7 @@ namespace Registry_Backend.Controllers
 			else
 			{
 				if (currentyHistory == null)
-					throw new Exception("Not assigned to user, can't terminate");
+					return Ok("Nothing to do, already unassigned");
 				else
 				{
 					currentyHistory.EndDate = DateTime.Now;
